# touchrect

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Config.cmake  Folder.DotSettings  README.md
libs/imgui/: CMakeLists.txt
targets/app/: app.h  main.cpp  with_gui.h
targets/touchrect/: app.cpp  app.h  common_concepts.h  main.cpp  pointer_injection.cpp  pointer_injection.h  simulated_output.cpp  simulated_output.h  target.cmake  tuple_binary_operators.cpp  tuple_binary_operators.h  user_pointer.cpp  user_pointer.h  with_gui.h
